Fix shape button icons not visible

--- a/src/assets/css/shapes.css
+++ b/src/assets/css/shapes.css
@@ -47,12 +47,6 @@
 .canvas-shape {
   position: absolute;
 
-  >.shape {
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-
   &:has(.icon) {
     display: flex;
     align-items: center;
@@ -83,6 +77,12 @@
   border-radius: 50%;
 }
 
+.shape {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 /* Shape Buttons */
 
 .shape-button {
@@ -96,15 +96,6 @@
 
   &.selected {
     background-color: #D5D5FC;
-  }
-
-  >* {
-    color:rgba(0, 0, 0, 0.5);
-  }
-
-  .background-icon {
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
   }
 
   .icon-tall {
